--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <section class="hero">
   <img src="grammys.jpg" alt="Gramophone Logo" class="hero-logo"> <!-- Logo instead of title -->
   <h1>Gran'pa turns young !</h1> <!-- Tagline remains -->
-  <a href="C:\Users\gowri\Desktop\gramaphone\products.html" class="cta">Explore Now</a>
+  <a href="products.html" class="cta">Explore Now</a>
 </section>
 
 
